[package]
name = "binary-guess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.24.1", features = ["wgpu"] }
egui = "0.24.1"
fs-err = "2.11.0"
image = "0.24.7"
itertools = "0.12.0"
egui_extras = { version = "*", features = ["all_loaders"] }
rfd = "0.12.1"
